<resources>
    <string name="app_name">MealPlanner17</string>
    <string name="api_key">3ef8f95c17944ed6bac930281b8b453e</string>
    <string name="meal_name">Meal Name</string>

    <string name="like">like</string>
    <string name="login">Login</string>
    <string name="email">email</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Register">Register</string>
    <string name="_2_people" />
    <string name="Servings">Servings</string>
    <string name="click_to_login">Click to Login</string>
    <string name="click_to_register">Click to Register</string>

    <string-array name="tags">
        <item>main course</item>
        <item>breakfast</item>
        <item>appetizer</item>
        <item name="side_dish">side dish</item>
        <item>snack</item>
        <item>salad</item>
        <item>beverage</item>
        <item>dessert</item>
    </string-array>

    <string-array name="breakfastTags">
        <item>breakfast</item>
        <item>vegetarian</item>
        <item>vegan</item>
        <item>gluten free</item>
        <item>dairy</item>
    </string-array>

    <string-array name="breakfastTagsExclude">
        <item>Dairy</item>
        <item>Gluten</item>
        <item>Peanut</item>
        <item>Tree Nut</item>
    </string-array>
    <string-array name="breakfastDrinkTags">
        <item>coffee</item>
        <item>tea</item>
        <item>juice</item>
        <!-- Add more drink tags as needed -->
    </string-array>
    <string-array name="breakfastDrinkTagsExclude">
        <item>milk</item>
        <item>alcohol</item>
        <!-- Add more exclude tags as needed -->
    </string-array>


    <string-array name="foodTypes">
        <item>Lunch</item>
        <item>vegan</item>
        <item>gluten free</item>
        <item>dairy</item>
        <item>African</item>
        <item>Asian</item>
        <item>French</item>
        <item>Italian</item>
        <item>Indian</item>

    </string-array>

    <string-array name="allergens">
        <item>Peanut</item>
        <item>Sesame</item>
        <item>Seafood</item>
        <item>Sulfite</item>


    </string-array>
    <string-array name="dinnerTags">
        <item>Chicken</item>
        <item>Salmon</item>
        <item>Pasta</item>
        <item>Rice</item>

    </string-array>
    <string-array name="dinnerTagsExclude">
        <item>Meat</item>
        <item>Seafood</item>
        <item>Nuts</item>
        <!-- Add more exclude tags as needed -->
    </string-array>

    <string name="account">Account</string>
    <string name="home">Home</string>
    <string name="discover_meals">Discover Meals</string>
    <string name="menu">Menu</string>
    <string name="dessert">dessert</string>
    <string name="dish_name">Dish name</string>
    <string name="source">Source</string>
    <string name="summary">Summary</string>
    <string name="ingredients">Ingredients</string>
    <string name="_1_pc">1 pc</string>
    <string name="chicken">chicken</string>
    <string name="similar_name">Similar Name</string>
    <string name="similar_recipes">Similar Recipes</string>


    <string name="hello_world">Hello World</string>
    <string name="logout">Logout</string>
    <string name="dinner">Dinner</string>
    <string name="lunch">Lunch</string>
    <string name="breakfast">Breakfast</string>
    <string name="first_name" />
    <string name="enter_first_name">First Name\n</string>
    <string name="enter_last_name">Last Name\n</string>
    <string name="meal_planner">Meal Planner</string>
    <string name="explore">Explore</string>
    <string name="order_filter_by">Order Filter By:</string>
    <string name="food_intolerance">Food Intolerance:</string>
    <string name="filter_food_by">Filter Food by</string>
    <string name="recipe">Recipe</string>
    <string name="save">Save</string>
    <string name="favorite">Favorite</string>

    <string name="favorite_random_dishes">Favorite Random Dishes</string>
    <string name="add_own_meal">Add Own Meal</string>
    <string name="generate_random_dishes">Generate Random Dishes</string>
    <string name="enter">Enter</string>
    <string name="click_to_refresh">Click to Refresh</string>
    <string name="browse_meals">Browse Meals</string>
    <string name="generate_random_lunch_meals">Generate Random Lunch Meals</string>
    <string name="add_ownMeal">Add Own Meal</string>
    <string name="view_your_liked_dishes">View Your Liked Dishes</string>
    <string name="side_dish">Side Dish</string>
    <string name="history">History</string>
    <string name="no_history_message">no_history_message</string>


</resources>