<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_backdrop"
    android:padding="45dp">

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="16dp"
        android:text="@string/generate_random_dishes" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_own_meal"
        android:layout_below="@id/button1"
        android:layout_centerInParent="true"

        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/favorite_random_dishes"
        android:layout_below="@id/button2"
        android:layout_centerInParent="true"
       />

</RelativeLayout>
